--- a/undangan.html
+++ b/undangan.html
@@ -46,7 +46,7 @@
             </div>
             
             <nav class="navbar">
-                <button class="btn btn-2">Dark Mode</button>
+                <button class="btn-2">Dark Mode</button>
             </nav>
         </section>
         <section class="page two">
